added wine case study

--- a/phase_3/week_9/5_15/case_study_wine.ipynb
+++ b/phase_3/week_9/5_15/case_study_wine.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "This data model is located within the Amazon relational database (the very same database we are using for the capstone), so you must use `sqlalchemy` to extract your data. \n",
     "\n",
+    "This table saved in this database is named `redwine` and it is located in the `public` (default) schema.\n",
+    "\n",
     "## Base Requirements\n",
     "\n",
     "As always, ensure that you are completing all 3 steps of data analysis:\n",
@@ -34,7 +36,7 @@
     "**Prescriptive Data Analysis**\n",
     "* Recommend a course of action based on your findings.\n",
     "\n",
-    "This will be due on 5/17. Please be sure to answer all discussion questions for each respective section."
+    "Please be sure to answer all discussion questions for each respective section."
    ]
   },
   {
@@ -42,13 +44,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analytics\n",
+    "## Exploratory Data Analysis\n",
     "\n",
-    "1. \n",
+    "1. What graphs will you make for univariate analysis? What statistical methods will you use?\n",
     "\n",
-    "2.\n",
+    "Answer here\n",
     "\n",
-    "3. "
+    "2. What graphs will you make for bivariate analysis?\n",
+    "\n",
+    "Answer here\n",
+    "\n",
+    "3. How will you check for multicollinearity?\n",
+    "\n",
+    "Answer here"
    ]
   },
   {
@@ -214,11 +222,17 @@
    "source": [
     "## Post Analysis\n",
     "\n",
-    "1. \n",
+    "1. Did you notice any normal distributions? If not, what steps should you take to normalize your data? \n",
     "\n",
-    "2.\n",
+    "Answer here\n",
     "\n",
-    "3. "
+    "2. Which models should you use for this dataset? Keep in mind that you should be choosing multiple models.\n",
+    "\n",
+    "Answer here\n",
+    "\n",
+    "3. Which non-parametric method can you use for this classification problem?\n",
+    "\n",
+    "Answer here"
    ]
   },
   {
@@ -228,11 +242,17 @@
    "source": [
     "## Confirmatory Data Analytics\n",
     "\n",
-    "1. \n",
+    "1. Did you notice any evidence of multi-collinearity? Which variables appeared to be collinear? How will you exclude them from your predictions?\n",
     "\n",
-    "2.\n",
+    "Answer here\n",
     "\n",
-    "3. "
+    "2. Based on your observations from EDA, which attributes do you believe are associated with higher quality scores?\n",
+    "\n",
+    "Answer here\n",
+    "\n",
+    "3. Which attributes do you believe are associated with low quality scores?\n",
+    "\n",
+    "Answer here"
    ]
   },
   {
@@ -240,7 +260,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Model 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check model accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Model 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check model accuracy\n"
+   ]
   },
   {
    "attachments": {},
@@ -249,11 +302,13 @@
    "source": [
     "## Post Analysis\n",
     "\n",
-    "1. \n",
+    "1. According to the logistic regression model, which features ended up being significant? Which features were not?\n",
     "\n",
-    "2.\n",
+    "Answer here\n",
     "\n",
-    "3. "
+    "2. According to the random forest classifier, which features ended up being important? Which features ended up not being important?\n",
+    "\n",
+    "Answer here"
    ]
   },
   {
@@ -263,7 +318,9 @@
    "source": [
     "## Prescriptive Data Analytics\n",
     "\n",
-    "1. What "
+    "1. Based on your analysis, which attribute would you recommend for the winery to maximize or minimize?\n",
+    "\n",
+    "Answer here"
    ]
   }
  ],
