Week 12 final notes

--- a/phase_3/week_12/6_6/final_tech_resources.ipynb
+++ b/phase_3/week_12/6_6/final_tech_resources.ipynb
@@ -46,10 +46,7 @@
     "## Tableau Study Resources\n",
     "\n",
     "**Textbooks/Course**\n",
-    "1. [Storytelling With Data](https://github.com/Saurav6789/Books-/blob/master/storytelling-with-data-cole-nussbaumer-knaflic.pdf)\n",
-    "\n",
-    "**Exercises**\n",
-    "1. "
+    "1. [Storytelling With Data](https://github.com/Saurav6789/Books-/blob/master/storytelling-with-data-cole-nussbaumer-knaflic.pdf)\n"
    ]
   },
   {
@@ -60,10 +57,7 @@
     "## Excel/VBA Study Resources\n",
     "\n",
     "**Textbooks/Course**\n",
-    "1. \n",
-    "\n",
-    "**Exercises**\n",
-    "1. "
+    "1. [Brief Introduction](https://www.simplilearn.com/tutorials/excel-tutorial/excel-vba)\n"
    ]
   },
   {
@@ -74,10 +68,7 @@
     "## Statistics Study Resources\n",
     "\n",
     "**Textbooks/Course**\n",
-    "1. [Khan Academy - AP Statistics](https://www.khanacademy.org/math/ap-statistics)\n",
-    "\n",
-    "**Exercises**\n",
-    "1. "
+    "1. [Khan Academy - AP Statistics](https://www.khanacademy.org/math/ap-statistics)\n"
    ]
   },
   {
@@ -100,10 +91,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Philosophy of Artificial Intelligence\n",
+    "## Philosophy of Artificial Intelligence & Cognition\n",
     "\n",
     "**Textbooks/Course**\n",
-    "1. [Introduction to Statistical Learning](https://hastie.su.domains/ISLR2/ISLRv2_website.pdf)"
+    "1. [The Mind Club](https://quickread.com/book-summary/the-mind-club-354)\n",
+    "2. [Homo Ludens](https://en.wikipedia.org/wiki/Homo_Ludens)\n",
+    "3. [Godel, Escher, Bach](https://en.wikipedia.org/wiki/G%C3%B6del,_Escher,_Bach)"
    ]
   },
   {
@@ -153,7 +146,7 @@
     "\n",
     "1. [Design an API](https://realpython.com/tutorials/api/)\n",
     "2. [Implement a live Dashboard via streamlit](https://docs.streamlit.io/)\n",
-    "3. [Implement a Django Data Dashboard]()"
+    "3. [Implement a Django Data Dashboard](https://www.djangoproject.com/)"
    ]
   },
   {
@@ -167,8 +160,11 @@
     "\n",
     "1. Practice tech/analyst skills at least 30 minutes a day. Skills not practiced are skills forgotten.\n",
     "2. Have a realistic outlook on your skills, but never be needlessly deferential to embedded professionals.\n",
-    "3. Rewrite code ALWAYS. \n",
-    "4. "
+    "3. Rewrite code in personal projects CONSTANTLY.\n",
+    "4. Find an organizational tool that best suits you in your pursuit of self-study & work.\n",
+    "    * [velocity](https://www.agile-scrum.be/whats-great-scrum-methodology/velocity-chart/)\n",
+    "    * [kanban](https://www.atlassian.com/agile/kanban#:~:text=What%20is%20kanban%3F,of%20work%20at%20any%20time.)\n",
+    "5. Use the terminal/command prompt ALWAYS."
    ]
   }
  ],
