--- a/phase_4/azure/week_1/content.ipynb
+++ b/phase_4/azure/week_1/content.ipynb
@@ -102,9 +102,44 @@
     "\n",
     "All organizations at some point in their growth hit a wall of complexity. Allow me to explain anecdotally.\n",
     "\n",
-    "In my previous data-intensive employment, I was tasked with solely designing the data infrastructure of a file-based database containing psychological experimental data. \n",
+    "In my previous data-intensive employment, I was tasked with designing a file-based data infrastructure containing HIPAA-protected data. \n",
     "\n",
-    "This \"database\" had to \n",
+    "This \"database\" had to:\n",
+    "* support consistent backups\n",
+    "* support security permissions\n",
+    "* support automatic workflows\n",
+    "* support automatic compliance checks\n",
+    "* exist in a file system shared by multiple external projects\n",
+    "\n",
+    "The tools that I used to accomplish this were:\n",
+    "* Python\n",
+    "* Bash\n",
+    "\n",
+    "While this **is theoretically possible** and the project saw some degree of success, I think we can all begin to appreciate the scope and complexity of such a feat when considering how these database features rely on a careful balance of:\n",
+    "* isolation\n",
+    "* consistency\n",
+    "* reliability\n",
+    "* and memory constraints\n",
+    "\n",
+    "Using basic Python just won't cut it. So what is the alternative? Do we:\n",
+    "\n",
+    "* Keep hacking away at complexity with our working knowledge of Python\n",
+    "* Purchase our own server racks, along with a dedicated database administration team\n",
+    "* Give up and just go back to file cabinets\n",
+    "\n",
+    "While I will say that storing data in file cabinets probably provides some degree of security not known since the 1970s, another alternative answer is to get integrated into the *cloud*.\n",
+    "\n",
+    "Purchasing a cloud computing platform subscription allows us to relegate the complexities of data storage & retrieval to a hypothetically secure platform maintained by a 3rd party. This, in theory, would allow us to focus on what is important to our organization, which might include:\n",
+    "\n",
+    "* figuring out customer behavior\n",
+    "* utilize algorithmic predictors that detect fraud\n",
+    "\n",
+    "While allowing us to ignore the constraints of:\n",
+    "\n",
+    "* storing granular customer data\n",
+    "* having machines powerful enough to train this algorithmic predictor\n",
+    "\n",
+    "This course will be our introduction to setting up these cloud solutions in an Azure environment.\n",
     "\n",
     "**Too Long, Didn't Read**: Organizations need simple & cheap solutions for their data needs. Azure is relatively cheaper than buying servers & an entire team to maintain those servers."
    ]
