--- a/phase_4/azure/week_2/content.ipynb
+++ b/phase_4/azure/week_2/content.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review - History of DBMS - Discussions\n",
+    "## Review - History of DBMS\n",
     "\n",
     "https://www.youtube.com/watch?v=LWS8LEQAUVc&t=1652s\n",
     "\n",
@@ -15,34 +15,37 @@
     "\n",
     "The following is a [pdf](https://15721.courses.cs.cmu.edu/spring2018/notes/01-intro.pdf) to go along with this respective lecture.\n",
     "\n",
-    "* **Hierarchical Database Models** (Pre-Relational)\n",
-    "    * Advantages: \n",
-    "        * One parent, many children; Similar to our OS file-system \n",
-    "        * Functional standardization of data\n",
-    "    * Disadvantages: \n",
-    "        * many-to-many relationships were complex\n",
-    "        * Adding new relationships results in the wholesale change of a database\n",
-    "        * Accessing hierarchical data requires you to know the entire \"chain of command\"\n",
-    "    * https://mariadb.com/kb/en/understanding-the-hierarchical-database-model/\n",
+    "### **Hierarchical Database Models** (Pre-Relational)\n",
     "\n",
-    "* **Network Database Models** (Pre-Relational)\n",
-    "    * Advantages: \n",
-    "        * Solves the many-to-many complexities of hierarchical database models; Allows for many parents, many children\n",
-    "    * Disadvantages:  \n",
-    "        * Still complex to implement and maintain\n",
-    "        * Programmers still had to understand the entire data structure to have efficient queries\n",
-    "    * https://mariadb.com/kb/en/understanding-the-network-database-model/\n",
+    "* Advantages: \n",
+    "    * One parent, many children; Similar to our OS file-system \n",
+    "    * Functional standardization of data\n",
+    "* Disadvantages: \n",
+    "    * many-to-many relationships were complex\n",
+    "    * Adding new relationships results in the wholesale change of a database\n",
+    "    * Accessing hierarchical data requires you to know the entire \"chain of command\"\n",
+    "* https://mariadb.com/kb/en/understanding-the-hierarchical-database-model/\n",
+    "\n",
+    "###  **Network Database Models** (Pre-Relational)\n",
+    "\n",
+    "* Advantages: \n",
+    "    * Solves the many-to-many complexities of hierarchical database models; Allows for many parents, many children\n",
+    "* Disadvantages:  \n",
+    "    * Still complex to implement and maintain\n",
+    "    * Programmers still had to understand the entire data structure to have efficient queries\n",
+    "* https://mariadb.com/kb/en/understanding-the-network-database-model/\n",
     "\n",
     "In June 1970 Edgar F. Codd published an academic paper proposing a \"[relational model of data for large shared data banks](https://www.seas.upenn.edu/~zives/03f/cis550/codd.pdf).\" This paper focused on developing a logical model that allowed for consistent syntax and user activity even when the internal states of the database are changed. This is led to:\n",
     "\n",
-    "* **Relational Database Models**\n",
-    "    * Advantages: \n",
-    "        * Store database in simple data structures\n",
-    "        * Access data via high-level language\n",
-    "        * Developers do not have to worry about details of physical storage \n",
-    "        * Models many kinds of relationships\n",
-    "    * Disadvantages:\n",
-    "        * 20 years later, object-oriented programming was taking off. A direct contrast to hierarchical data modeling.\n",
+    "###  **Relational Database Models**\n",
+    "\n",
+    "* Advantages: \n",
+    "    * Store database in simple data structures\n",
+    "    * Access data via high-level language\n",
+    "    * Developers do not have to worry about details of physical storage \n",
+    "    * Models many kinds of relationships\n",
+    "* Disadvantages:\n",
+    "    * 20 years later, object-oriented programming was taking off. A direct contrast to hierarchical data modeling.\n",
     "\n",
     "In tandem with this logical model, implements of a structured query language (read only the first letter of those 3 words) also began to spring up. This query language was briefly named \"SEQUEL\" before a trademark dispute caused the developers to rename the language \"SQL.\" \n",
     "\n",
@@ -55,23 +58,25 @@
     "\n",
     "To solve some of these issues, various object-relational solutions that we still use today came to the forefront of enterprise. Note: we are now discussing implementations of DBMS, as opposed to logical data models.\n",
     "\n",
-    "* **Postgres**\n",
-    "    * Advantages: \n",
-    "        * Automatic support of objects, classes, and inheritance in database schemas and query language\n",
-    "        * Supports function overloading (shadowing)\n",
-    "        * Each table is defined as a data type\n",
-    "    * Disadvantages:\n",
-    "        * ...\n",
+    "### **Postgres**\n",
+    "\n",
+    "* Advantages: \n",
+    "    * Automatic support of objects, classes, and inheritance in database schemas and query language\n",
+    "    * Supports function overloading (shadowing)\n",
+    "    * Each table is defined as a data type\n",
+    "* Disadvantages:\n",
+    "    * ...\n",
     "\n",
     "During this time, enterprises realized that they didn't only want transactional databases, but also databases for analytics. For this reason, [data cubes](https://en.wikipedia.org/wiki/Data_cube) were made, which were databases that contained pre-computed aggregates optimized for analytical queries.\n",
     "\n",
     "As more organizations went online and began collecting larger quantities of data, they realized that they would prefer two types of databases: one for transactional processes (OLTP), and another for analytics (OLAP). Forks of `Postgres` came to the forefront to implement [column-oriented DBMS](https://en.wikipedia.org/wiki/Column-oriented_DBMS) which allowed for efficient analytical queries. As a result of this progression, data cubes were no longer in use as [columnar stores were much faster](https://dataschool.com/data-modeling-101/row-vs-column-oriented-databases/).\n",
     "\n",
-    "* **DATAllegro**\n",
-    "    * Advantages:\n",
-    "        * Columnar storage allows for faster analytical queries than row-storage\n",
-    "    * Disadvantages:\n",
-    "        * The name sounds like an allergy medicine\n",
+    "### **DATAllegro**\n",
+    "\n",
+    "* Advantages:\n",
+    "    * Columnar storage allows for faster analytical queries than row-storage\n",
+    "* Disadvantages:\n",
+    "    * The name sounds like an allergy medicine\n",
     "\n",
     "Datallegro was eventually bought by Microsoft and served as the (inspiration?) foundation for [Microsofts Parallel Datawarehouse](https://stackoverflow.com/questions/45426780/differences-between-azure-data-warehouse-and-microsoft-parallel-datawarehouse-p).\n",
     "\n",
@@ -79,76 +84,83 @@
     "\n",
     "At the same time, Google developed a programming paradigm called [MapReduce](https://research.google/pubs/pub62/) which allowed for [efficient analytical functions]((https://www.ibm.com/topics/mapreduce)) on large datasets. Companies would then generate open-source implementations of this paradigm.\n",
     "\n",
-    "* **Hadoop**\n",
-    "    * Advantages:\n",
-    "        * High-speed data processing\n",
-    "    * Disadvantages:\n",
-    "        * Once again, developers were writing code to interact with a database. Taking [a major step backward](https://homes.cs.washington.edu/~billhowe/mapreduce_a_major_step_backwards.html) in terms of managing complexity.\n",
+    "### **Hadoop**\n",
+    "\n",
+    "* Advantages:\n",
+    "    * High-speed data processing\n",
+    "* Disadvantages:\n",
+    "    * Once again, developers were writing code to interact with a database. Taking [a major step backward](https://homes.cs.washington.edu/~billhowe/mapreduce_a_major_step_backwards.html) in terms of managing complexity.\n",
     "\n",
     "Early implementations of Hadoop required developers to develop a working knowledge of Java. These days, map-reduce functions can be written in a variety of languages.\n",
     "\n",
     "Furthermore, as companies went online, they also created [\"NoSQL\" database solutions](https://www.couchbase.com/resources/why-nosql/) that were \"highly scalable\", \"highly available\", and perhaps didn't abide by the strict norms of relational databases. That is, corrupted data could potentially exist on a database without the entire system failing. For example, if you are Amazon, you are probably keeping track of millions if not billions of items in a shopping cart. Some might be turned into orders, some just might sit there, whereas others will be deleted. \n",
     "\n",
-    "* **Apache Cassandra**\n",
-    "    * Advantages\n",
-    "        * Allows for new-attributes \"on-demand\"\n",
-    "        * Highly scalable, if one server goes down, the entire system isn't compromised\n",
-    "        * Schema-less (or schema last)\n",
-    "    * Disadvantages\n",
-    "        * Custom APIs instead of SQL. Stonebraker weeps.\n",
+    "### **Apache Cassandra**\n",
+    "\n",
+    "* Advantages\n",
+    "    * Allows for new-attributes \"on-demand\"\n",
+    "    * Highly scalable, if one server goes down, the entire system isn't compromised\n",
+    "    * Schema-less (or schema last)\n",
+    "* Disadvantages\n",
+    "    * Custom APIs instead of SQL. Stonebraker weeps.\n",
     "\n",
     "All NoSQL solutions now support SQL syntax. Notice a pattern?\n",
     "\n",
     "To introduce the same scalability as NoSQL systems, [NewSQL](https://en.wikipedia.org/wiki/NewSQL) systems were developed to support OLTP workloads without giving up ACIDity. These were also known as \"distributed DBMS.\"\n",
     "\n",
-    "* **CockroachDB**\n",
-    "    * Advantages\n",
-    "        * Highly scalable and resilient like NoSQL systems\n",
-    "        * Supports OLTP-heavy operations for data storage\n",
-    "    * Disadvantages\n",
-    "        * Unfortunate name\n",
+    "### **CockroachDB**\n",
+    "\n",
+    "* Advantages\n",
+    "    * Highly scalable and resilient like NoSQL systems\n",
+    "    * Supports OLTP-heavy operations for data storage\n",
+    "* Disadvantages\n",
+    "    * Unfortunate name\n",
     "\n",
     "Many of the traditional RDBMS models of today have solved issues of scalability.\n",
     "\n",
     "These days, whenever companies want to integrate database solutions, they no longer have to provision physical machines, hardware, and employees. Instead, we have the *cloud*. This is when database-as-a-service solutions (DBaaS) start to emerge. \n",
     "\n",
-    "* **Azure SQL Database**\n",
-    "    * Advantages\n",
-    "        * All the perks of a comprehensive database solution, for cheap!\n",
-    "    * Disadvantages\n",
-    "        * ...\n",
+    "### **Azure SQL Database**\n",
+    "\n",
+    "* Advantages\n",
+    "    * All the perks of a comprehensive database solution, for cheap!\n",
+    "* Disadvantages\n",
+    "    * ...\n",
     "\n",
     "As these cloud solutions proliferated, [shared disk architectures](http://www.benstopford.com/2009/11/24/understanding-the-shared-nothing-architecture/) likewise began to be used. Whereas \"shared nothing\" architecture ensured that each node has autonomy over a certain subset of data, \"shared disk\" guaranteed that each node can access another respective node's data, without adding another layer of complexity to the end-user. This is also known as a [data lake](https://en.wikipedia.org/wiki/Data_lake).\n",
     "\n",
-    "* **Azure Data Lakes**\n",
-    "    * Advantages\n",
-    "        * Flat architecture\n",
-    "        * Great for storing BLOBS (binary large objects) & files\n",
-    "        * Prevent [\"data silos\"](https://www.dataeaze.io/from-data-silo-to-data-lake-the-path-to-business-insights/).\n",
-    "    * Disadvantages\n",
-    "        * Poorly managed data lakes become [\"data swamps\"](https://en.wikipedia.org/wiki/Data_lake#Criticism)\n",
+    "### **Azure Data Lakes**\n",
+    "\n",
+    "* Advantages\n",
+    "    * Flat architecture\n",
+    "    * Great for storing BLOBS (binary large objects) & files\n",
+    "    * Prevent [\"data silos\"](https://www.dataeaze.io/from-data-silo-to-data-lake-the-path-to-business-insights/).\n",
+    "* Disadvantages\n",
+    "    * Poorly managed data lakes become [\"data swamps\"](https://en.wikipedia.org/wiki/Data_lake#Criticism)\n",
     "\n",
     "Within the past couple of years, systems that organize data in [graph logical models](https://en.wikipedia.org/wiki/Graph_theory) also were developed. This was similar in principle to the [CODASYL network data model](https://en.wikipedia.org/wiki/CODASYL), where data is represented via [nodes & edges](https://en.wikipedia.org/wiki/Graph_database).\n",
     "\n",
-    "* **Neo4j**\n",
-    "    * Advantages\n",
-    "        * Great for querying relationships & networks\n",
-    "        * Optimized for data retrieval \n",
-    "        * Model inconsistent data models\n",
-    "    * Disadvantages\n",
-    "        * RDBMSs are better for storage or quick look-up\n",
+    "### **Neo4j**\n",
+    "\n",
+    "* Advantages\n",
+    "    * Great for querying relationships & networks\n",
+    "    * Optimized for data retrieval \n",
+    "    * Model inconsistent data models\n",
+    "* Disadvantages\n",
+    "    * RDBMSs are better for storage or quick look-up\n",
     "\n",
     "[Research](https://www.cidrdb.org/cidr2023/papers/p66-wolde.pdf) has shown that recent updates in RDBMS can outperform graph databases\n",
     "\n",
     "And to conclude our exploration of databases, we also have [time series databases](https://en.wikipedia.org/wiki/Time_series_database) which are systems optimized for querying & storying time-bound data. These databases utilize compression algorithms to manage data efficiently. \n",
     "\n",
-    "* **InfluxDB**\n",
-    "    * Advantages\n",
-    "        * Optimized for fast retrieval of time-bound data\n",
-    "    * Disadvantages\n",
-    "        * Complex to set up\n",
+    "### **InfluxDB**\n",
     "\n",
-    "**Conclusion**\n",
+    "* Advantages\n",
+    "    * Optimized for fast retrieval of time-bound data\n",
+    "* Disadvantages\n",
+    "    * Complex to set up\n",
+    "\n",
+    "### **Conclusion**\n",
     "\n",
     "Almost all database solutions eventually were integrated into the collective of SQL. What was once considered a clear demarcation of NoSQL, NewSQL, and GraphQL is now all mixed under the umbrella of a consistent structured query language (SQL).\n",
     "\n",
@@ -192,21 +204,28 @@
     "\n",
     "The DP-900: Microsoft Azure Data Fundementals Exam is a certificate that shows fundamental \"data literacy\" when it comes to working with:\n",
     "\n",
-    "* Core Data Concepts\n",
-    "    * Data Representation: Structured, semi-structured, unstructured data\n",
-    "    * Data Storage: data file formats, types of databases\n",
-    "    * Data Workloads: Transactional & analytical workloads\n",
-    "    * Data Roles: DB Admins, data engineers, data analysts\n",
-    "* Relational Data \n",
-    "    * Relational Concepts: Basic SQL, features of relational data, normalization, common databases objects\n",
-    "    * Azure Data Services: Azure SQL DB, Azure SQL, SQL Server, Azure Virtual Machine, Azure services for open source db\n",
-    "* Non-Relational Data\n",
-    "    * Azure Data Storage: Blob, file, table\n",
-    "    * Azure Cosmos DB: Use-cases, DB API\n",
-    "* Analytics workload\n",
-    "    * Large Scale Analytics: Data ingestion & processing, analytical data stores, data warehousing\n",
-    "    * Real-Time Analytics: Batch vs streaming data, technologies for real-time analytics\n",
-    "    * Visualization: Power BI\n",
+    "### Core Data Concepts\n",
+    "\n",
+    "* Data Representation: Structured, semi-structured, unstructured data\n",
+    "* Data Storage: data file formats, types of databases\n",
+    "* Data Workloads: Transactional & analytical workloads\n",
+    "* Data Roles: DB Admins, data engineers, data analysts\n",
+    "\n",
+    "### Relational Data \n",
+    "\n",
+    "* Relational Concepts: Basic SQL, features of relational data, normalization, common databases objects\n",
+    "* Azure Data Services: Azure SQL DB, Azure SQL, SQL Server, Azure Virtual Machine, Azure services for open source db\n",
+    "\n",
+    "### Non-Relational Data\n",
+    "\n",
+    "* Azure Data Storage: Blob, file, table\n",
+    "* Azure Cosmos DB: Use-cases, DB API\n",
+    "\n",
+    "### Analytics workload\n",
+    "\n",
+    "* Large Scale Analytics: Data ingestion & processing, analytical data stores, data warehousing\n",
+    "* Real-Time Analytics: Batch vs streaming data, technologies for real-time analytics\n",
+    "* Visualization: Power BI\n",
     "\n",
     "All in the context of the Azure Cloud Computing Environment. These topics could be considered an individual's first foray into data concepts, which they will then use to either secure a job that utilizes the Azure Cloud Computing environment or go on to achieve another Azure specialized certification.\n",
     "\n",
@@ -244,15 +263,20 @@
     "\n",
     "Within the DP-900 exam, we explore 3 discrete roles:\n",
     "\n",
-    "* Database administrators\n",
-    "    * *Supervises* & *maintains* the database. Responsible for availability, user permissions (security), & operational aspects of on-premise & cloud solutions. \n",
-    "    * manage databases, assigning permissions to users, storing backup copies of data and restore data in the event of a failure.\n",
-    "* Data engineers\n",
-    "    * *Engineers* and *monitors* data workflows to ingest, clean, and transform data for analytical workloads. Responsible for ensuring data privacy. \n",
-    "    * manage infrastructure and processes for data integration across the organization, applying data cleaning routines, identifying data governance rules, and implementing pipelines to transfer and transform data between systems.\n",
-    "* Data analysts\n",
-    "    * *Analyzes* and *explores* data. Builds analytical models and visualizes data trends. \n",
-    "    * explore and analyze data to create visualizations and charts that enable organizations to make informed decisions.\n",
+    "### Database administrators\n",
+    "\n",
+    "* *Supervises* & *maintains* the database. Responsible for availability, user permissions (security), & operational aspects of on-premise & cloud solutions. \n",
+    "* manage databases, assigning permissions to users, storing backup copies of data and restore data in the event of a failure.\n",
+    "\n",
+    "### Data engineers\n",
+    "\n",
+    "* *Engineers* and *monitors* data workflows to ingest, clean, and transform data for analytical workloads. Responsible for ensuring data privacy. \n",
+    "* manage infrastructure and processes for data integration across the organization, applying data cleaning routines, identifying data governance rules, and implementing pipelines to transfer and transform data between systems.\n",
+    "\n",
+    "### Data analysts\n",
+    "\n",
+    "* *Analyzes* and *explores* data. Builds analytical models and visualizes data trends. \n",
+    "* explore and analyze data to create visualizations and charts that enable organizations to make informed decisions.\n",
     "\n",
     "Note, while this exam discusses specific responsibilities for specific roles, technologists (especially on smaller teams) are often asked to wear multiple hats."
    ]
