--- a/phase_4/azure/week_4/content.ipynb
+++ b/phase_4/azure/week_4/content.ipynb
@@ -72,7 +72,9 @@
     "\n",
     "**Graph databases**\n",
     "\n",
-    "Store entities as nodes with links to define relationships between them\n"
+    "Store entities as nodes with links to define relationships between them\n",
+    "\n",
+    "https://learn.microsoft.com/en-us/azure/architecture/guide/technology-choices/data-store-overview\n"
    ]
   },
   {
@@ -105,7 +107,7 @@
     "\n",
     "**Isolated**: Multiple transactions can occur without interference\n",
     "\n",
-    "Transactions cannot interfere with one another.  Ex: One transaction transfers money between bank accounts, while another transaction observes balances. The second transaction *cannot* observe the intermediate state of the first transaction, where money is withdrawn from one bank account, but not deposited in another.\n",
+    "Transactions cannot interfere with one another. Ex: One transaction transfers money between bank accounts, while another transaction observes balances. The second transaction *cannot* observe the intermediate state of the first transaction, where money is withdrawn from one bank account, but not deposited in another.\n",
     "\n",
     "--------\n",
     "\n",
@@ -117,17 +119,6 @@
     "\n",
     "OLTP systems are typically used to support live applications that process business data - often referred to as line of business (LOB) applications."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
