--- a/phase_4/azure/week_4/exercises.ipynb
+++ b/phase_4/azure/week_4/exercises.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "https://classroom.google.com/c/NjEzNjM5NTI4NDky/a/NjE1ODcyNjY4NDc5/details\n",
+    "\n",
+    "https://classroom.google.com/c/NjEzNjM5NTI4NDky/a/NjE1ODczNDkzNTA2/details"
+   ]
   }
  ],
  "metadata": {
