--- a/1.01/10_3/code_along/jupyter.ipynb
+++ b/1.01/10_3/code_along/jupyter.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Jupyter\n",
     "\n",
-    "We can insert "
+    "We can insert text blocks inside of  Jupyter"
    ]
   }
  ],
