--- a/1.01/10_3/code_along/jupyter.ipynb
+++ b/1.01/10_3/code_along/jupyter.ipynb
@@ -6,13 +6,80 @@
    "source": [
     "# Jupyter\n",
     "\n",
-    "We can insert text blocks inside of  Jupyter"
+    "We can insert \"markdown\" blocks inside of Jupyter that can be formatted using special symbols."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"We can also put Python code!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "y = 18\n",
+    "\n",
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that markdown has a feature where the last line of code is always printed out to the notebook itself! Be mindful that **only the last line will be printed**. Also be mindful that this feature is **not present in regular Python modules**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"hello world\"\n",
+    "\"goodbye world\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is Markdown?\n",
+    "\n",
+    "You'll notice that all of our text files contain the extension (end of file) `.md`. This is the file extension that signifies that a file is in \"markdown\" format? \n",
+    "\n",
+    "What exactly is markdown? Think of a text file that supports formatting using simple and memorable symbols. If you've ever left a comment on reddit, you should be familair with this syntax! \n",
+    "\n",
+    "# We can make large headers!\n",
+    "## Smaller sub-headers\n",
+    "### And so on!\n",
+    "\n",
+    "We can also implement [hyperlinks](https://www.google.com/).\n",
+    "\n",
+    "And even images! \n",
+    "\n",
+    "![A guinea pig](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1869px-Python-logo-notext.svg.png)\n",
+    "\n",
+    "To see the full functionality of markdown, check out this documentation: https://www.markdownguide.org/basic-syntax/ "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
